--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 					<p><span>Workcenter</span></p>
 					<p><span>Auto Filler 1</span></p>
 					<form class="formgroup" action="#"  method="post" name="form-wrap">
-					 	<div class="login">	
-					 		<label for="login-form">Login<br></label>
-					 		<input id="login-form" class="input-wrap" name="login" type="text" class="input-wrap" required>
+					 	<div class="formgroup-login">	
+					 		<label for="login-input">Login<br></label>
+					 		<input id="login-input" class="input-wrap" name="login" type="text" class="input-wrap" required>
 					 		<!--<span>#</span>-->
 					 	</div>
-						<div class="password">
-						 	<label for="password-form">Password<br></label>
-							<input id="password-form" class="input-wrap" name="password" type="password"  required>
+						<div class="formgroup-password">
+						 	<label for="password-input">Password<br></label>
+							<input id="password-input" class="input-wrap" name="password" type="password"  required>
 							<!--<span>#</span>-->
 						</div>
-						<div class="btn-form">
+						<div class="formgroup-btn">
 							<button class="btn-wrap" type="submit">Log In</button>
 						</div>
 					</form>
