--- a/index_nav.html
+++ b/index_nav.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Navigation</title>
 	 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
+	 <!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
+	 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="style_nav.css">
 </head>
 <body>
@@ -49,10 +51,7 @@
 							<a class="pannel-icon" href="#"><i class="fas fa-forward"></i><br>Next Record</a>
 						</div>
 					</div>
-					<div class="vertical">
-						<img src="line_nav.png" alt="Vertical line">
-					</div>
-					<div class="arrow-group step">
+					<div class="arrow-group arrow-group__step">
 						<div class="arrow-block  pannel-group">
 							<a class="pannel-icon" href="#"><i class="fas fa-step-backward"></i><br>Previous Step</a>
 						</div>
@@ -70,18 +69,18 @@
 			<img src="imgnav.png" alt="Picture">
 		</div>
 	</div>
-	<nav aria-label="Page navigation" class="pagination">
-		<ul class="pagination_list">
-			<li class="active">
-				<a class="page-link" href="#">1</a>
-			</li>
-			<li>
-				<a class="page-link" href="#">2</a>
-			</li>
-			<li>
-				<a class="page-link" href="#">3</a>
-			</li>
-		</ul>
+	<nav class="nav-panel-pagination" aria-label="Page navigation">
+  		<ul class="pagination justify-content-center">
+   			<li class="page-item">
+   				<a class="page-link" href="#">1</a>
+   			</li>
+    		<li class="page-item">
+    			<a class="page-link" href="#">2</a>
+    		</li>
+    		<li class="page-item">
+    			<a class="page-link" href="#">3</a>
+    		</li>
+    	</ul>
 	</nav>
 </body>
 </html>
